objects/CSS_WS_No_Availability__c.object
<CustomObject>
    <fields>
        <fullName>CSS_WS_After_Sales_Engineer__c</fullName>
        <label>After Sales Engineer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Attention_DR__c</fullName>
        <label>Attention DR</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Attention_Dealer__c</fullName>
        <label>Attention Dealer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Attention_Person__c</fullName>
        <label>Attention Person</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer</fullName>
                    <default>true</default>
                    <label>Dealer</label>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Authorizer__c</fullName>
        <label>Authorizer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Brand_Unit__c</fullName>
        <label>Brand</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Capture_Folio__c</fullName>
        <displayFormat>ND{00000}</displayFormat>
        <label>Folio Captura</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Client__c</fullName>
        <label>Client</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Comments__c</fullName>
        <label>Comments</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Created_By_Display__c</fullName>
        <defaultValue>IF(
   OR (CONTAINS($UserRole.Name, &quot;Distributor&quot;) 
      ,CONTAINS($UserRole.Name, &quot;distributor&quot;)
      ,CONTAINS($UserRole.Name, &quot;DISTRIBUTOR&quot;)
      )
  ,($User.FirstName + &quot; &quot; + $User.LastName)
  , IF(
       OR (CONTAINS($UserRole.Name, &quot;Factory&quot;) 
          ,CONTAINS($UserRole.Name, &quot;factory&quot;)
          ,CONTAINS($UserRole.Name, &quot;FACTORY&quot;)
          )
      ,&quot;Factory&quot;
      ,&quot;Role not allowed&quot;)
)</defaultValue>
        <label>Created by</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Creation_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Creation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSS_WS_DR_Contact__c</fullName>
        <label>DR Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Dealer_DR__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Dealer DR</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1</booleanFilter>
            <filterItems>
                <field>Account.Type</field>
                <operation>contains</operation>
                <valueField>$Source.CSS_WS_Attention_Person__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CSS WS No Availabilities</relationshipLabel>
        <relationshipName>NA_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Dealer__c</fullName>
        <label>Dealer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_ESN__c</fullName>
        <label>Engine Serial Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Factory_Distribution__c</fullName>
        <label>Factory Distribution</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Login_Variable__c</fullName>
        <label>Login Variable</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Model_Unit__c</fullName>
        <label>Model</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_No_attention_reason__c</fullName>
        <label>No attention reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CSS_WS_No_attention_reasons_picklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_WS_Number_Unit__c</fullName>
        <label>Economic Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_OEM__c</fullName>
        <label>Original Equipment Manufacturers</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Regional_Distributor__c</fullName>
        <label>Regional Distributor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Special_Delivery__c</fullName>
        <label>Special Delivery</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSS_WS_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Pending authorization</fullName>
                </value>
                <value>
                    <fullName>Authorized by planta</fullName>
                </value>
                <value>
                    <fullName>Denied by planta</fullName>
                </value>
                <value>
                    <fullName>Authorization pending</fullName>
                    <isActive>false</isActive>
                    <label>Authorization pending</label>
                </value>
                <value>
                    <fullName>Authorized</fullName>
                    <isActive>false</isActive>
                    <label>Authorized</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                    <isActive>false</isActive>
                    <label>Rejected</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CSS WS No Availability</label>
    <nameField>
        <label>No Availability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS WS No Availabilities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>